--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
+html {
+  padding: 0;
+  margin: 0;
+}
+body {
+  background: rgb(21,11,0);
+  background: linear-gradient(to right, rgba(21,11,0,1) 0%, rgba(14,104,171,1) 25%, rgba(0,115,62,1) 50%, rgba(211,32,42,1) 75%, rgba(249,250,244,1) 100%);
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
+  padding: 1em 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-weight: 900;
+  color: #FFFFFF;
+  font-size: 5rem;
+  letter-spacing: 0.2;
+  font-family: 'Bigelow Rules', serif;
+  text-shadow: 2px 2px 0px #333333;
 }
